<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <ImageView
        android:id="@+id/pepperoni_pizza_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/big_pepperoni_pizza" />

    <TextView
        android:id="@+id/pepperoni_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni_pizza"
        android:layout_marginLeft="30dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/pepperoni_pizza_desc"
        app:layout_constraintBottom_toBottomOf="@id/pepperoni_pizza_desc"/>

    <TextView
        android:id="@+id/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#FF733F0e"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/pepperoni_pizza"
        app:layout_constraintTop_toBottomOf="@id/pepperoni_pizza_desc"/>

    <TextView
        android:id="@+id/deskripsi_pizza"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_pizza"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#FF733F0E"
        android:justificationMode="inter_word"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/harga"
        app:layout_constraintStart_toStartOf="@id/pepperoni_pizza"
        />

    <Button
        android:id="@+id/button_order"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:backgroundTint="#D52F2F"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/deskripsi_pizza"
        app:layout_constraintStart_toStartOf="@id/deskripsi_pizza"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_order"
        android:text="@string/kembali"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:backgroundTint="#D52F2F"
        app:layout_constraintStart_toStartOf="@id/deskripsi_pizza"/>

</androidx.constraintlayout.widget.ConstraintLayout>